// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Phase 5B RBAC Permission Integrity should snapshot the admin permissions 1`] = `
[
  "organization.view",
  "organization.update",
  "organization.settings",
  "member.view",
  "member.invite",
  "member.update",
  "member.remove",
  "audit.read",
  "roles.view",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "inventory.delete",
  "products.view",
  "products.create",
  "products.update",
  "products.delete",
  "sales.view",
  "sales.create",
  "sales.update",
  "sales.delete",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "purchasing.delete",
  "finance.view",
  "finance.create",
  "finance.update",
  "finance.delete",
  "reports.view",
  "reports.export",
  "customers.view",
  "customers.create",
  "customers.update",
  "customers.delete",
  "vendors.view",
  "vendors.create",
  "vendors.update",
  "vendors.delete",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the manager permissions 1`] = `
[
  "organization.view",
  "member.view",
  "member.invite",
  "roles.view",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "products.view",
  "products.create",
  "products.update",
  "sales.view",
  "sales.create",
  "sales.update",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "finance.view",
  "finance.create",
  "finance.update",
  "reports.view",
  "reports.export",
  "customers.view",
  "customers.create",
  "customers.update",
  "vendors.view",
  "vendors.create",
  "vendors.update",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the member permissions 1`] = `
[
  "organization.view",
  "member.view",
  "roles.view",
  "inventory.view",
  "products.view",
  "sales.view",
  "purchasing.view",
  "finance.view",
  "reports.view",
  "customers.view",
  "vendors.view",
]
`;

exports[`Phase 5B RBAC Permission Integrity should snapshot the owner permissions and retain all expected granular capabilities 1`] = `
[
  "organization.view",
  "organization.update",
  "organization.delete",
  "organization.settings",
  "member.view",
  "member.invite",
  "member.update",
  "member.remove",
  "audit.read",
  "roles.view",
  "roles.create",
  "roles.update",
  "roles.delete",
  "ownership.transfer",
  "inventory.view",
  "inventory.create",
  "inventory.update",
  "inventory.delete",
  "products.view",
  "products.create",
  "products.update",
  "products.delete",
  "customers.view",
  "customers.create",
  "customers.update",
  "customers.delete",
  "vendors.view",
  "vendors.create",
  "vendors.update",
  "vendors.delete",
  "sales.view",
  "sales.create",
  "sales.update",
  "sales.delete",
  "sales.send",
  "sales.export",
  "purchasing.view",
  "purchasing.create",
  "purchasing.update",
  "purchasing.delete",
  "finance.view",
  "finance.create",
  "finance.update",
  "finance.delete",
  "reports.view",
  "reports.export",
]
`;
